Change thumbnail layout .

--- a/layout.html
+++ b/layout.html
@@ -113,7 +113,174 @@
 					</div>
 				</div>
 
+				<!-- Main Page Content Thumbnails -->
+
 				<div class="row main-content-thumbs">
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-1.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-2.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-3.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-4.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-5.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-6.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-7.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-8.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-9.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-10.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+
+					<div class="col m4 l3 thumbnail-cols">
+						<img src="images/vice/v-11.jpg">
+						<div class="thumb-overlay grey darken-4">
+							<div class="thumb-description">
+								<h6 class="thumb-title">The Queen of Corruption</h6>
+								<p>Wall self-funded no more interviews with Fox.</p>
+								<small class="thumb-date">August 12, 2016</small>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+		<script type="text/javascript">
+			$(".button-collapse").sideNav({edge: 'left'});
+			$('.carousel.carousel-slider').carousel({full_width: true});
+		</script>
+	</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="row main-content-thumbs">
 					<div class="col m3 thumbnail-cols">
 						<div class="thumb-overlay">
 							<div class="thumb-description">
@@ -245,18 +412,7 @@
 						</div>
 						<img src="images/album-art/cover600x600.jpeg">
 					</div>
-				</div>
-			</div>
-		</div>
-
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-		<script type="text/javascript">
-			$(".button-collapse").sideNav({edge: 'left'});
-			$('.carousel.carousel-slider').carousel({full_width: true});
-		</script>
-	</body>
-</html>
+				</div> -->
 
 
 
