--- a/layout.html
+++ b/layout.html
@@ -63,9 +63,9 @@
 
 					<div class="video-description-div col s12 l5">
 						<h4>Freestyle Running Compilation</h4>
-						<small class="video-date">August 12, 2016</small>
+						<small class="video-date indigo-text text-accent-1">August 12, 2016</small>
 						<span class="video-info-pipe"> | </span>
-						<small class="content-author">Extreme Sports Channel</small>
+						<small class="content-author indigo-text text-accent-1">Extreme Sports Channel</small>
 						<p class="video-description">Carl Icahn no time for political correctness, bang Latinos helicopter Putin it's my hair aliens by the way Megyn Kelly beating us up Cowboys stadium he hit me first, it's my hair beating us General Petraeus the talking heads speach disabilities I love the blacks, Mexico very rich tone hair beating us up.</p>
 						<div class="tags-area">
 							<small class="tags indigo accent-1">Parkour</small>
