--- a/sections.html
+++ b/sections.html
@@ -118,42 +118,84 @@
 				</div>
 
 
-
 				<!-- Section 1 Short + Image -->
 				<div class="row short-section">
-					<div class="col s12 short-section no-padding " style="background: url(images/short-image.jpeg); background-repeat: no-repeat;background-position: center;">
-					</div>
+					<div class="col s12 short-section no-padding " style="background: url(images/short-image.jpeg); background-repeat: no-repeat; background-attachment: fixed; background-position: center;"></div>
 				</div>
 
 				<br>
 				<br>
 
 				<!-- Section 1 Short + Image + Text -->
-				<div class="row">
-					<div class="col s12 short-section no-padding " style="background: url(images/short-image.jpeg); background-repeat: no-repeat;background-position: center;">
-					</div>
-					<div class="col s12 no-padding">
-						<p class="center-align">Section 1 Short with an Image and some Text</p>
-					</div>
+				<div class="row short-section">
+					<div class="col s12 m3 no-padding short-section" style="background: url(images/vice/v-10.jpg); background-repeat: no-repeat; background-position: center;"></div>
+
+					<div class="col s12 m9 no-padding">
+						<h5 class="m-left-15">Section 1 Short with an Image and some Text</h5>
+						<p class="m-left-15">Description goes here.</p>
+					</div>					
 				</div>
 
-
 				<br>
 				<br>
-
 
 				<!-- Section 1 Short + Gallery -->
 				<div class="row">					
-					<div class="col s12 no-padding">
-						<img class="col s12 m3" src="images/vice/v-10.jpg">
-						<img class="col s12 m3" src="images/vice/v-10.jpg">
-						<img class="col s12 m3" src="images/vice/v-10.jpg">
-						<img class="col s12 m3" src="images/vice/v-10.jpg">
+					<div class="col s12 no-padding short-section">
+						<div class="carousel short-section">
+						    <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+						    <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+						    <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+						    <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+						    <a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+					  	</div>
+					</div>
+				</div>
+
+				<br>
+				<br>
+
+				<!-- Section 1 Short + Audio -->
+				<!-- Mobile Version -->
+				<div class="row grey darken-4 hide-on-med-and-up">
+					<img class="col s12 no-padding" src="images/kreayshawn.jpg">
+
+					<div class="col s12 m11 no-padding" controls>
+						<div class="row no-margin">
+							<p class="center-align">Artist - Title - Track Information</p>
+						</div>
+
+						<div class="row no-margin">
+							<audio class="col s12" controls>
+								<source src="#" type="audio/mpeg">
+							</audio>
+						</div>
+					</div>
+				</div>
+				<!--Desktop Version -->
+				<div class="row grey darken-4 valign-wrapper short-section hide-on-small-only">
+					<img class="col m1 no-padding valign" src="images/kreayshawn.jpg" style="max-height: 100px; max-width: 100px;">
+
+					<div class="col s12 m11 no-padding" controls>
+						<div class="row no-margin">
+							<p class="center-align">Artist - Title - Track Information</p>
+						</div>
+
+						<div class="row no-margin">
+							<audio class="col s12" controls>
+								<source src="#" type="audio/mpeg">
+							</audio>
+						</div>
 					</div>
 				</div>
 
 
 
+
+				<br>
+				<br>
+				<br>
+				<br>
 
 
 
@@ -176,6 +218,17 @@
 					closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
 				}
 			);
+
+
+			$(document).ready(function(){
+				$('.carousel').carousel({
+				    dist:0,
+				    shift:0,
+				    padding:20,
+
+				});
+
+		    });
 		</script>
 	</body>
 </html>
