--- a/sections.html
+++ b/sections.html
@@ -189,6 +189,92 @@
 					</div>
 				</div>
 
+				<br>
+				<br>
+
+				<!-- Section 1 Medium + Text (can be transparent or color) -->
+				<div class="row">
+					<div class="medium-section valign-wrapper">
+						<div class="valign col s12">
+							<p class="center-align">Section 1 Medium with some text.</p>
+						</div>
+					</div>
+				</div>
+
+
+				<!-- Section 1 Medium + Image -->
+				<div class="row medium-section">
+					<div class="col s12 medium-section no-padding " style="background: url(images/short-image.jpeg); background-repeat: no-repeat; background-position: center;"></div>
+				</div>
+
+				<br>
+				<br>
+
+				<!-- Section 1 Medium + Image + Text -->
+				<div class="row medium-section">
+					<div class="col s12 m3 no-padding medium-section" style="background: url(images/vice/v-10.jpg); background-repeat: no-repeat; background-position: center;"></div>
+
+					<div class="col s12 m9 no-padding">
+						<h5 class="m-left-15">Section 1 Short with an Image and some Text</h5>
+						<p class="m-left-15">Description goes here.</p>
+					</div>					
+				</div>
+
+				<br>
+				<br>
+
+				<!-- Section 1 Medium + Gallery -->
+				<div class="row">					
+					<div class="col s12 no-padding medium-section">
+						<div class="carousel medium-section">
+						    <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+						    <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+						    <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+						    <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+						    <a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+					  	</div>
+					</div>
+				</div>
+
+				<br>
+				<br>
+
+				<!-- Section 1 Short + Audio -->
+				<!-- Mobile Version -->
+				<div class="row grey darken-4 hide-on-med-and-up">
+					<img class="col s12 no-padding" src="images/kreayshawn.jpg">
+
+					<div class="col s12 m11 no-padding" controls>
+						<div class="row no-margin">
+							<p class="center-align">Artist - Title - Track Information</p>
+						</div>
+
+						<div class="row no-margin">
+							<audio class="col s12" controls>
+								<source src="#" type="audio/mpeg">
+							</audio>
+						</div>
+					</div>
+				</div>
+				<!--Desktop Version -->
+				<div class="row grey darken-4 valign-wrapper medium-section hide-on-small-only">
+					<img class="col m2 no-padding valign no-margin" src="images/kreayshawn.jpg" style="max-height: 200px; max-width: 200px;">
+
+					<div class="col s12 m10 no-padding" controls>
+						<div class="row no-margin">
+							<p class="center-align">Artist - Title - Track Information</p>
+						</div>
+
+						<div class="row no-margin">
+							<audio class="col s12" controls>
+								<source src="#" type="audio/mpeg">
+							</audio>
+						</div>
+					</div>
+				</div>
+
+				<br>
+				<br>
 
 
 
